--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 flask>=3.1.0
 pandas>=2.2.3
 openpyxl>=3.1.5
+Pillow>=11.1.0
+pyautogui>=0.9.54
+pytesseract>=0.3.13
+opencv-python>=4.11.0.86
+matplotlib>=3.10.1
+pywin32
